# ChangeLog for media-sound/substract_wave
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/substract_wave/ChangeLog,v 1.1 2007/10/06 14:52:19 sbriesen Exp $

*substract_wave-0.3 (06 Oct 2007)

  06 Oct 2007; Stefan Briesenick <sbriesen@gentoo.org>
  +files/substract_wave-0.3.diff, +metadata.xml, +substract_wave-0.3.ebuild:
  initial commit.
