@@ -1,5 +1,5 @@
 AUX substract_wave-0.3.diff 594 RMD160 1774a14e549f684f7e777e7fe14000dac71045e2 SHA1 11ae2aaf2f1eb14b494b1f05475d9f91dc48eda6 SHA256 b0d501fca4afc934b276010a5da7f07e8277969c4ab7cdad1d083e7b4a8d964e
 DIST substract_wave-0.3.tgz 14793 RMD160 adf7c7307911745876552f2025016dcced316632 SHA1 12e39587977c188d705391033aee01dac04cc024 SHA256 c1f833eb892e9acaa48d47e395cbdb127325b7787c78383bf2623289157731e4
-EBUILD substract_wave-0.3.ebuild 870 RMD160 d3e0f549fa707edd834961d16d82f210e202b738 SHA1 bcb751dd72919d4bf1de21d650b79cb1d1e2e824 SHA256 28fbf5b18005b642b27b3dd94113bfaa3ff0b8687e70c281a8f485aeaa27f22d
-MISC ChangeLog 413 RMD160 d77feebcc868544f03f8657834b6188bcc2b5010 SHA1 c96326ae322d00500accfe5bd8b705709a1ded16 SHA256 c85fd421008b3563d4f7d6ad06fe0a169465f81683099e3766ebc804869df55b
+EBUILD substract_wave-0.3.ebuild 884 RMD160 857acf00dda52150252671c4fa540c8186388bf6 SHA1 1fc62429e04077b88af15186f3a004580f81a00f SHA256 97d8ed55996ead0b62abdd07d363ca0bda8f115cf273def52b20ac9026783db3
+MISC ChangeLog 578 RMD160 55a0d53dcfdd1b7a3d39de26968ee5bb7200b54b SHA1 6bdf62de1374f3c0b43832dea89d5cc593601b94 SHA256 4e6df02c7021ff22b136e6aff9eab1d27f58b70675c24db11183bca3963e2ea6
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
