@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/substract_wave/Attic/substract_wave-0.3.ebuild,v 1.1 2007/10/06 14:52:19 sbriesen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/substract_wave/Attic/substract_wave-0.3.ebuild,v 1.2 2009/02/06 14:10:48 sbriesen Exp $
 
 inherit eutils toolchain-funcs flag-o-matic
 
@@ -22,7 +22,7 @@ src_unpack() {
 
 src_compile() {
 	append-flags -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE	-D_LARGEFILE64_SOURCE
-	emake CC="$(tc-getCC)" CFLAGS="${CFLAGS}" || die "emake failed"
+	emake CC="$(tc-getCC)" CFLAGS="${CFLAGS}" LIBRARY="-lm" || die "emake failed"
 }
 
 src_install() {
